XMLtoCSV/objects/unpackaged/objects/Product_Plan_vod__c.object
<CustomObject>
    <description>Product Strategy Tool to enable brand strategy and activity tracking by brand for each account</description>
    <fields>
        <fullName>Active_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if this plan is active.  Only Product Plans with this field checked will be visible when clicking on the &quot;Apply Product Plan&quot; button.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <description>Percent Complete</description>
        <label>% Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>Description of the plan</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Detail_Group_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Product Catalog records of type Detail Group.</description>
        <label>Detail Group</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Product Plans (Detail Group)</relationshipLabel>
        <relationshipName>Product_Plans_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the product for this plan in the product catalog</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Product Plans</relationshipLabel>
        <relationshipName>Product_Plan_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Picklist of available statuses for this plan.  This field is used in the approval workflow process</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In  Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Product Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>